Colaboratory를 통해 생성됨

--- a/03-02-minimizing_cost.ipynb
+++ b/03-02-minimizing_cost.ipynb
@@ -74,7 +74,7 @@
         "def train(X,Y,lr, epochs):\n",
         "  \n",
         "  for step in range(epochs):\n",
-        "    with tf.GradientTape(persistent=True) as tape:\n",
+        "    with tf.GradientTape() as tape:\n",
         "      hypothesis = X * W\n",
         "      cost = tf.reduce_mean(tf.square(hypothesis - Y))\n",
         "\n",
@@ -84,7 +84,7 @@
         "    print(step, cost.numpy(), W.numpy())"
       ],
       "id": "DrO4eEhglk-d",
-      "execution_count": 20,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -94,13 +94,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff886061-0b92-420e-a775-ef6b278bdf73"
+        "outputId": "5b775aec-9430-473a-b2f8-66bd752b46ae"
       },
       "source": [
         "train(X,Y,0.1,21)"
       ],
       "id": "CHBbbA1So5Ri",
-      "execution_count": 21,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
