Colaboratory를 통해 생성됨

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,6 +1,46 @@
 {
- "cells": [],
- "metadata": {},
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5,
+  "metadata": {
+    "colab": {
+      "name": "Untitled.ipynb",
+      "provenance": []
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WfgQSbgOoe-2"
+      },
+      "source": [
+        ""
+      ],
+      "id": "WfgQSbgOoe-2"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RK3QTbWDofS7"
+      },
+      "source": [
+        ""
+      ],
+      "id": "RK3QTbWDofS7",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "30dxHmEPog-b"
+      },
+      "source": [
+        ""
+      ],
+      "id": "30dxHmEPog-b",
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
 }
