--- a/04-03-multi-variable-linear-regression.ipynb
+++ b/04-03-multi-variable-linear-regression.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 5,
   "metadata": {
     "colab": {
-      "name": "04-03-multi-variable-linear-regression.ipynb",
+      "name": "04-02-multi-variable-linear-regression.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
@@ -77,11 +77,7 @@
         "id": "19o_J8mW7_G7"
       },
       "source": [
-        "X = tf.constant(x_data)\n",
-        "Y = tf.constant(y_data)\n",
-        "\n",
-        "W = tf.Variable(tf.random.normal([3,1]), name='weight')\n",
-        "b = tf.Variable(tf.random.normal([1]), name='bias')"
+        "tf.model = tf.keras.Sequential()"
       ],
       "id": "19o_J8mW7_G7",
       "execution_count": null,
@@ -90,136 +86,64 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G0js_TR1vK5v"
+        "id": "gBh5demJMR4T"
       },
       "source": [
-        "lr = 0.00001"
+        "tf.model.add(tf.keras.layers.Dense(units=1, input_dim=3)) # input_dim=3 gives multi-variable regression\n",
+        "tf.model.add(tf.keras.layers.Activation('linear')) # this line can be omitted, as linear activation is default"
       ],
-      "id": "G0js_TR1vK5v",
+      "id": "gBh5demJMR4T",
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "30dxHmEPog-b"
+        "id": "abYrw2T3MpbI"
       },
       "source": [
-        "# for step in range(1):\n",
-        "#   with tf.GradientTape() as tape:\n",
-        "#     # cost/loss function\n",
-        "#     cost = tf.reduce_mean(tf.square(hypothesis - Y))\n",
-        "  \n",
-        "#   gred = tape.gradient(cost, [W,b])\n",
-        "#   W = W - lr * gred[0]\n",
-        "#   b = b - lr * gred[1]\n",
-        "\n",
-        "#   # if (step % 10) == 0:\n",
-        "#   #   print('Step: {} \\t cost: {}\\n'.format(step, cost))"
+        "tf.model.compile(loss='mse', optimizer=tf.keras.optimizers.SGD(lr=1e-5))\n",
+        "tf.model.summary()"
       ],
-      "id": "30dxHmEPog-b",
+      "id": "abYrw2T3MpbI",
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VKsDTTDX-zNh"
+        "id": "HOpRZ4KwLjz0"
       },
       "source": [
-        "for step in range(2000):\n",
-        "  hypothesis = tf.matmul(X, W) + b\n",
-        "  cost = tf.reduce_mean(tf.square(hypothesis - Y))\n",
-        "  w_gredient = tf.reduce_mean((hypothesis-Y) * X)\n",
-        "  b_gredient = tf.reduce_mean((hypothesis-Y))\n",
-        "  W = W - lr * w_gredient\n",
-        "  b = b - lr * b_gredient\n",
-        "\n",
-        "  if (step % 10) == 0:\n",
-        "    print('Step: {} \\t cost: {}\\n'.format(step, cost))"
+        "history = tf.model.fit(x_data, y_data, epochs=100)"
       ],
-      "id": "VKsDTTDX-zNh",
+      "id": "HOpRZ4KwLjz0",
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C8NgsXHeF0RW",
-        "outputId": "faa34f69-a683-4d4c-c84b-b91c8a102a6e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "02B128AsNajY"
       },
       "source": [
-        "#prediction\n",
-        "predict_y = tf.matmul(X, W) + b\n",
-        "predict_y.numpy()"
+        "y_predict = tf.model.predict(x_data)\n",
+        "print('y_predict:\\n', y_predict)\n",
+        "print('y:\\n',y_data)"
       ],
-      "id": "C8NgsXHeF0RW",
-      "execution_count": 82,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[150.81482],\n",
-              "       [185.286  ],\n",
-              "       [180.67537],\n",
-              "       [194.40799],\n",
-              "       [144.28491]], dtype=float32)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 82
-        }
-      ]
+      "id": "02B128AsNajY",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pQM8yXePJHV-",
-        "outputId": "6d987078-79e8-4f51-de04-5a824becb316",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "Y"
-      ],
-      "id": "pQM8yXePJHV-",
-      "execution_count": 83,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tf.Tensor: shape=(5, 1), dtype=float32, numpy=\n",
-              "array([[152.],\n",
-              "       [185.],\n",
-              "       [180.],\n",
-              "       [196.],\n",
-              "       [142.]], dtype=float32)>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 83
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bqWbkV-VJKzt"
+        "id": "6WK5mDZRNoEX"
       },
       "source": [
         ""
       ],
-      "id": "bqWbkV-VJKzt",
+      "id": "6WK5mDZRNoEX",
       "execution_count": null,
       "outputs": []
     }
