--- a/05-02-logistic-regression.ipynb
+++ b/05-02-logistic-regression.ipynb
@@ -1,122 +1,294 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 5,
-  "metadata": {
-    "colab": {
-      "name": "05-02-logistic-regression.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "35fcd9bb",
+   "metadata": {
+    "colab_type": "text",
+    "id": "view-in-github"
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/dantae74/machine-learning/blob/main/05-02-logistic-regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
-  "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "WfgQSbgOoe-2",
+   "metadata": {
+    "id": "WfgQSbgOoe-2"
+   },
+   "source": [
+    "모두를 위한 머신러닝에서 가져왔습니다.\n",
+    "# logistic regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "RK3QTbWDofS7",
+   "metadata": {
+    "id": "RK3QTbWDofS7"
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "rZdM6QfvnPTZ",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 518
+    },
+    "id": "rZdM6QfvnPTZ",
+    "outputId": "1f0d9547-b18c-4d5a-df20-5985a12b54db"
+   },
+   "outputs": [],
+   "source": [
+    "url='https://raw.githubusercontent.com/hunkim/DeepLearningZeroToAll/master/data-03-diabetes.csv'\n",
+    "c = pd.read_csv(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "FER80GHinoGl",
+   "metadata": {
+    "id": "FER80GHinoGl"
+   },
+   "outputs": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/dantae74/machine-learning/blob/main/05-02-logistic-regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>-0.294118</th>\n",
+       "      <th>0.487437</th>\n",
+       "      <th>0.180328</th>\n",
+       "      <th>-0.292929</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0.00149028</th>\n",
+       "      <th>-0.53117</th>\n",
+       "      <th>-0.0333333</th>\n",
+       "      <th>0.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.882353</td>\n",
+       "      <td>-0.145729</td>\n",
+       "      <td>0.081967</td>\n",
+       "      <td>-0.414141</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.207153</td>\n",
+       "      <td>-0.766866</td>\n",
+       "      <td>-0.666667</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.058824</td>\n",
+       "      <td>0.839196</td>\n",
+       "      <td>0.049180</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.305514</td>\n",
+       "      <td>-0.492741</td>\n",
+       "      <td>-0.633333</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.882353</td>\n",
+       "      <td>-0.105528</td>\n",
+       "      <td>0.081967</td>\n",
+       "      <td>-0.535354</td>\n",
+       "      <td>-0.777778</td>\n",
+       "      <td>-0.162444</td>\n",
+       "      <td>-0.923997</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.376884</td>\n",
+       "      <td>-0.344262</td>\n",
+       "      <td>-0.292929</td>\n",
+       "      <td>-0.602837</td>\n",
+       "      <td>0.284650</td>\n",
+       "      <td>0.887276</td>\n",
+       "      <td>-0.600000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.411765</td>\n",
+       "      <td>0.165829</td>\n",
+       "      <td>0.213115</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.236960</td>\n",
+       "      <td>-0.894962</td>\n",
+       "      <td>-0.700000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.647059</td>\n",
+       "      <td>-0.216080</td>\n",
+       "      <td>-0.180328</td>\n",
+       "      <td>-0.353535</td>\n",
+       "      <td>-0.791962</td>\n",
+       "      <td>-0.076006</td>\n",
+       "      <td>-0.854825</td>\n",
+       "      <td>-0.833333</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.176471</td>\n",
+       "      <td>0.155779</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.052161</td>\n",
+       "      <td>-0.952178</td>\n",
+       "      <td>-0.733333</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-0.764706</td>\n",
+       "      <td>0.979899</td>\n",
+       "      <td>0.147541</td>\n",
+       "      <td>-0.090909</td>\n",
+       "      <td>0.283688</td>\n",
+       "      <td>-0.090909</td>\n",
+       "      <td>-0.931682</td>\n",
+       "      <td>0.066667</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.058824</td>\n",
+       "      <td>0.256281</td>\n",
+       "      <td>0.573770</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.868488</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-0.529412</td>\n",
+       "      <td>0.105528</td>\n",
+       "      <td>0.508197</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.120715</td>\n",
+       "      <td>-0.903501</td>\n",
+       "      <td>-0.700000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   -0.294118  0.487437  0.180328  -0.292929         0  0.00149028  -0.53117  \\\n",
+       "0  -0.882353 -0.145729  0.081967  -0.414141  0.000000   -0.207153 -0.766866   \n",
+       "1  -0.058824  0.839196  0.049180   0.000000  0.000000   -0.305514 -0.492741   \n",
+       "2  -0.882353 -0.105528  0.081967  -0.535354 -0.777778   -0.162444 -0.923997   \n",
+       "3   0.000000  0.376884 -0.344262  -0.292929 -0.602837    0.284650  0.887276   \n",
+       "4  -0.411765  0.165829  0.213115   0.000000  0.000000   -0.236960 -0.894962   \n",
+       "5  -0.647059 -0.216080 -0.180328  -0.353535 -0.791962   -0.076006 -0.854825   \n",
+       "6   0.176471  0.155779  0.000000   0.000000  0.000000    0.052161 -0.952178   \n",
+       "7  -0.764706  0.979899  0.147541  -0.090909  0.283688   -0.090909 -0.931682   \n",
+       "8  -0.058824  0.256281  0.573770   0.000000  0.000000    0.000000 -0.868488   \n",
+       "9  -0.529412  0.105528  0.508197   0.000000  0.000000    0.120715 -0.903501   \n",
+       "\n",
+       "   -0.0333333  0.1  \n",
+       "0   -0.666667    1  \n",
+       "1   -0.633333    0  \n",
+       "2    0.000000    1  \n",
+       "3   -0.600000    0  \n",
+       "4   -0.700000    1  \n",
+       "5   -0.833333    0  \n",
+       "6   -0.733333    1  \n",
+       "7    0.066667    0  \n",
+       "8    0.100000    0  \n",
+       "9   -0.700000    1  "
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WfgQSbgOoe-2"
-      },
-      "source": [
-        "모두를 위한 머신러닝에서 가져왔습니다.\n",
-        "# logistic regression"
-      ],
-      "id": "WfgQSbgOoe-2"
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RK3QTbWDofS7"
-      },
-      "source": [
-        "import tensorflow as tf\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import requests\n",
-        "from io import StringIO"
-      ],
-      "id": "RK3QTbWDofS7",
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rZdM6QfvnPTZ",
-        "outputId": "1f0d9547-b18c-4d5a-df20-5985a12b54db",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 518
-        }
-      },
-      "source": [
-        "url='https://github.com/hunkim/DeepLearningZeroToAll/blob/master/data-03-diabetes.csv'\n",
-        "s=requests.get(url).text\n",
-        "\n",
-        "c=pd.read_csv(StringIO(s))"
-      ],
-      "id": "rZdM6QfvnPTZ",
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ParserError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mParserError\u001b[0m                               Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-3dc14d8f678b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mStringIO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    686\u001b[0m     )\n\u001b[1;32m    687\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 688\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    689\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    690\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    458\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    459\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 460\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    461\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    462\u001b[0m         \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   1196\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1197\u001b[0m         \u001b[0mnrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_validate_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nrows\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1198\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1200\u001b[0m         \u001b[0;31m# May alter columns / col_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   2155\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2156\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2157\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2158\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2159\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_first_chunk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.read\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_low_memory\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mParserError\u001b[0m: Error tokenizing data. C error: Expected 1 fields in line 79, saw 2\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "FER80GHinoGl"
-      },
-      "source": [
-        ""
-      ],
-      "id": "FER80GHinoGl",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "30dxHmEPog-b"
-      },
-      "source": [
-        ""
-      ],
-      "id": "30dxHmEPog-b",
-      "execution_count": null,
-      "outputs": []
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-  ]
+   ],
+   "source": [
+    "c.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30dxHmEPog-b",
+   "metadata": {
+    "id": "30dxHmEPog-b"
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "include_colab_link": true,
+   "name": "05-02-logistic-regression.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
