Colaboratory를 통해 생성됨

--- a/10-01-mnist-softmax.ipynb
+++ b/10-01-mnist-softmax.ipynb
@@ -79,7 +79,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "af2AD_XBFiLJ"
+        "id": "af2AD_XBFiLJ",
+        "outputId": "21c1fb16-6206-4f11-faa0-7186cb062422",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
@@ -88,16 +92,25 @@
       ],
       "id": "af2AD_XBFiLJ",
       "execution_count": 4,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "A26RumGOFoLZ",
-        "outputId": "10283742-80f2-43fd-921f-8e194738fd6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "df86546a-69f4-46c9-d029-df23cebce169"
       },
       "source": [
         "# change data shape\n",
@@ -153,17 +166,17 @@
         "#        [ 1.,  0.,  0.]], dtype=float32)"
       ],
       "id": "ni5ccdU-Ggib",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0zOlm-LOGgrZ",
-        "outputId": "1e1ab23d-574c-4f0a-f659-49c0d6951ac3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5f7b963c-4c87-4c55-ea66-d0b263a5afab"
       },
       "source": [
         "tf.model = tf.keras.Sequential()\n",
@@ -172,7 +185,7 @@
         "tf.model.summary()"
       ],
       "id": "0zOlm-LOGgrZ",
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,47 +214,46 @@
         "history = tf.model.fit(x_train, y_train, batch_size=batch_size, epochs=training_epochs, verbose=0)"
       ],
       "id": "7FNlMjdQGlQD",
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "gZgSvwX-Glbz",
-        "outputId": "950d111c-717b-4420-fb89-d9b63e049673",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a0b1c11e-60a8-432d-de6f-3c335421840d"
       },
       "source": [
         "predictions = tf.model.predict(x_test)\n",
         "print('Prediction: \\n', predictions)\n",
-        "x_train\n",
-        "score = tf.model.evaluate(x_train, y_train)\n",
+        "score = tf.model.evaluate(x_test, y_test)\n",
         "print('Accuracy: ', score[1])"
       ],
       "id": "gZgSvwX-Glbz",
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Prediction: \n",
-            " [[2.8195714e-06 1.2184561e-11 4.5327065e-06 ... 9.9351537e-01\n",
-            "  1.7746281e-05 3.8982922e-04]\n",
-            " [1.9368212e-04 2.5869551e-06 9.9366510e-01 ... 1.3728725e-17\n",
-            "  4.4618911e-05 3.6933527e-14]\n",
-            " [1.1518124e-06 9.8492789e-01 8.0551999e-03 ... 6.8147969e-04\n",
-            "  2.4855412e-03 1.6524809e-04]\n",
+            " [[1.3124034e-06 7.6351486e-12 6.6285370e-06 ... 9.9523550e-01\n",
+            "  1.7539143e-05 3.1131360e-04]\n",
+            " [1.1829749e-04 1.2599825e-06 9.9254429e-01 ... 8.6540463e-18\n",
+            "  4.3727559e-05 9.6271285e-14]\n",
+            " [1.9715922e-06 9.7418368e-01 1.5535019e-02 ... 7.5323740e-04\n",
+            "  3.9485814e-03 3.5321090e-04]\n",
             " ...\n",
-            " [9.8093036e-09 1.3105784e-08 5.2501941e-06 ... 1.9738604e-03\n",
-            "  6.5463693e-03 2.0931916e-02]\n",
-            " [8.4887738e-08 2.8785834e-07 1.2917111e-07 ... 8.4609056e-08\n",
-            "  5.5841715e-03 1.1327418e-07]\n",
-            " [1.0524014e-06 5.0729559e-14 1.0064731e-04 ... 7.9781136e-13\n",
-            "  3.4979088e-08 5.7484864e-11]]\n",
-            "1875/1875 [==============================] - 2s 859us/step - loss: 0.2455 - accuracy: 0.9318\n",
-            "Accuracy:  0.9318166375160217\n"
+            " [6.3427747e-09 5.1396620e-09 3.2516796e-06 ... 9.0150605e-04\n",
+            "  5.7115178e-03 1.7103264e-02]\n",
+            " [8.3260062e-08 1.9075074e-07 2.0516136e-07 ... 8.1625373e-08\n",
+            "  8.4671425e-03 1.6254926e-07]\n",
+            " [5.0531662e-07 2.3368697e-14 4.7118127e-05 ... 5.0015591e-13\n",
+            "  2.9451495e-08 6.2538454e-11]]\n",
+            "313/313 [==============================] - 0s 645us/step - loss: 0.2615 - accuracy: 0.9289\n",
+            "Accuracy:  0.9289000034332275\n"
           ],
           "name": "stdout"
         }
@@ -256,7 +268,7 @@
         ""
       ],
       "id": "3GpeK2FhHYlf",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     }
   ]
